--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+<!-- <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>-->
 <!-- include ar.js for A-Frame -->
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<!-- <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>-->
+<script type='text/javascript' src="lib/aframe.min.js"></script>
+<script type='text/javascript' src="lib/aframe-ar.js"></script>
+<script type='text/javascript' src="main.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <!-- create your content here. just a box for now -->
 	<a-assets>
-        <!--<a-asset-item id="buddha" src="models/rijks-buddha.obj"></a-asset-item>-->
-       <!-- <a-asset-item id="buddhamtl" src="models/rijks-buddha.mtl"></a-asset-item>-->
-        <a-asset-item id="trafo" src="models/TRAFO_4BORNES.obj"></a-asset-item>
-        <a-asset-item id="trafomtl" src="models/TRAFO_4BORNES.mtl"></a-asset-item>
+        <a-asset-item id="buddha" src="models/buddha/rijks-buddha.obj"></a-asset-item>
+        <a-asset-item id="buddhamtl" src="models/buddha/rijks-buddha.mtl"></a-asset-item>
+        <a-asset-item id="trafo" src="models/trafo4Bornes/TRAFO_4BORNES.obj"></a-asset-item>
+        <a-asset-item id="trafomtl" src="models/trafo4Bornes/TRAFO_4BORNES.mtl"></a-asset-item>
     </a-assets>
 
 
     <a-marker preset='kanji'>
         <a-entity>
-            <a-obj-model src="#trafo"  position="0 0 0" rotation="0 0 0" scale="0.14 0.14 0.14"> </a-obj-model>
+          <a-obj-model src="#trafo" mtl=#trafomtl position="0 0 0" rotation="0 0 0" scale="0.2 0.2 0.2"> </a-obj-model>
         </a-entity>
-        <!--<a-obj-model src="#buddha" mtl=#buddhamtl position="0 0 0" rotation="-90 0 0" scale="0.1 0.1 0.1"> </a-obj-model>-->
-
+        <!--<a-obj-model src="#trafo"  position="0 0 0" rotation="0 0 0" scale="0.14 0.14 0.14"> </a-obj-model>-->
      </a-marker>
 
      <!-- add a simple camera -->
