--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!-- include A-Frame obviously -->
-<!-- <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>-->
+<!--<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>-->
 <!-- include ar.js for A-Frame -->
 <!-- <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>-->
-<script type='text/javascript' src="lib/aframe.min.js"></script>
-<script type='text/javascript' src="lib/aframe-ar.js"></script>
-<script type='text/javascript' src="main.js"></script>
+<script src="lib/aframe.min.js"></script>
+<script src="lib/aframe-ar.js"></script>
+<script src="main.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <!-- create your content here. just a box for now -->
