--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <body style='margin : 0px; overflow: hidden;'>
   <!-- <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
     <!-- create your content here. just a box for now -->
-
-<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+<a-scene cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
   <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
   <a-assets>
         <a-asset-item id="buddha" src="models/buddha/rijks-buddha.obj"></a-asset-item>
@@ -39,7 +38,6 @@
 
      <!-- add a simple camera -->
   <a-camera camera>
-    <a-cursor ></a-cursor>
    </a-camera>
 
   </a-scene>
