--- a/index.html
+++ b/index.html
@@ -9,13 +9,45 @@
   </title>
   <meta name="Demo Realidad Aumentada" content="MuseoAR">
 </head>
+<style>
+ .intro-overlay {
+   z-index: 1;
+   position: absolute;
+   top: 20px;
+   left: 20px;
+   max-width: 700px;
+   box-sizing: border-box;
+   padding: 1.5em;
+   color: #FFF;
+   background: rgba(0, 0, 0, 0.75);
+   font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+ }
+</style>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<script src="lib/jquery.min.js"></script>
 <script src="lib/aframe.min.js"></script>
 <script src="lib/aframe-ar.js"></script>
 <script src="main.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
   <!-- <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
     <!-- create your content here. just a box for now -->
+
+
+
+ <!-- dialog box overlay for desktop users -->
+<div id="dialog" class="img-rounded intro-overlay">
+  <!-- <p><a onclick="hide()" class="btn btn-danger pull-right">x</a></p> -->
+  <h4><strong>MuseoAR</strong></h4>
+  <p><div class="input-group">
+    <input id="jsonInput" type="text" class="form-control" placeholder="Paste JSON String Here">
+    <span class="input-group-btn">
+      <button onclick="hide()" class="btn btn-info" type="button">Load JSON String</button></span></p>
+    </div>
+  </div>
+
+
+  <!--  <a onclick="show()"><div class="menu-overlay btn btn-outline-secondary"></div></a> -->
+
 <a-scene cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
   <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
   <a-assets>
@@ -23,7 +55,7 @@
         <a-asset-item id="buddhamtl" src="models/buddha/rijks-buddha.mtl"></a-asset-item>
         <a-asset-item id="trafo" src="models/trafo4Bornes/TRAFO_4BORNES.obj"></a-asset-item>
         <a-asset-item id="trafomtl" src="models/trafo4Bornes/TRAFO_4BORNES.mtl"></a-asset-item>
-    </a-assets>
+</a-assets>
 
 
     <a-marker preset='kanji'>
