added back button and menu controls now work

--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,8 @@
   <script src="lib/jquery.min.js"></script>
   <script src="lib/aframe.min.js"></script>
   <script src="lib/aframe-ar.js"></script>
-  <script src="main.js"></script>
+  <script src="index.js"></script>
+  <script src="jsonTools.js"></script>
 </head>
 
 
@@ -22,5 +23,5 @@
     <a-camera></a-camera>
   </a-scene>
 
-  <script>load();</script>
+  <script>run();</script>
 </body>
