--- a/vr.html
+++ b/vr.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <script src="lib/jquery.min.js"></script>
   <script src="lib/aframe.min.js"></script>
-  <script src="lib/aframe-ar.js"></script>
   <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
 </head>
@@ -17,9 +16,8 @@
 <body style='margin : 0px; overflow: hidden;'>
     <a href="index.html"><div class="menu-overlay"></div></a>
 
-<a-scene cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-  <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
-    <a-marker id="marker"  preset='kanji'></a-marker>
+<a-scene cursor="rayOrigin: mouse" vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+    <a-entity id="marker"  ></a-entity>
     <a-camera></a-camera>
   </a-scene>
 
