--- a/ar.html
+++ b/ar.html
@@ -15,13 +15,18 @@
 
 
 <body style='margin : 0px; overflow: hidden;'>
-    <a href="index.html"><div class="menu-overlay"></div></a>
+    <a href="index.html"><div class="menu-overlay"></div></a>  
+      <ul id="checklist" class="checklist" style="list-style-type:square">
+          <li>Coffee ✅</li> 
+          <li>Tea ❎</li>
+          <li>Milk ✅</li>
+        </ul>
 
-<a-scene cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-  <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
-    <a-marker id="marker"  preset='kanji'></a-marker>
-    <a-camera></a-camera>
-  </a-scene>
+    <a-scene cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+      <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
+        <a-marker id="marker"  preset='kanji'></a-marker>
+        <a-camera></a-camera>
+      </a-scene>
 
   <script>run();</script>
 </body>
