--- a/vr.html
+++ b/vr.html
@@ -16,10 +16,10 @@
 <body style='margin : 0px; overflow: hidden;'>
     <a href="index.html"><div class="menu-overlay"></div></a>
 
-<a-scene cursor="rayOrigin: mouse" vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-    <a-entity id="marker"  ></a-entity>
-    <a-camera></a-camera>
+<a-scene cursor="rayOrigin: mouse">
+    <a-entity id="marker" rotation="63.873 0 0" position="-0.227 1.597 -0.829"></a-entity>
   </a-scene>
 
   <script>run();</script>
 </body>
+</html>
