--- a/trafoChecklist.html
+++ b/trafoChecklist.html
@@ -37,6 +37,6 @@
           </div>
 
 
-          <script>loadMenu("trafo");
+          <script>loadMenu("trafoCheckList");
           $("#arCheck").prop('checked', true);</script>
 </html>
