--- a/vr.html
+++ b/vr.html
@@ -15,11 +15,13 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <a href="index.html"><div class="menu-overlay"></div></a>
+    <ul id="checklist" class="checklist" style="list-style-type:square">
+    </ul>
 
-<a-scene cursor="rayOrigin: mouse">
+<a-scene cursor="rayOrigin: mouse " vr-mode-ui="enabled:false">
     <a-entity id="marker" rotation="63.873 0 0" position="-0.227 1.597 -0.829"></a-entity>
   </a-scene>
 
   <script>run();</script>
 </body>
-</html>
+</html> 
