added click to items and more interactions

--- a/ar.html
+++ b/ar.html
@@ -9,6 +9,7 @@
   <script src="lib/jquery.min.js"></script>
   <script src="lib/aframe.min.js"></script>
   <script src="lib/aframe-ar.js"></script>
+  <script src="https://raw.githubusercontent.com/AVGP/a-touch-controls/master/a-touch-controls.js"></script>
   <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
 </head>
