--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,7 @@
   <script src="lib/jquery.min.js"></script>
   <script src="lib/aframe.min.js"></script>
   <script src="lib/aframe-ar.js"></script>
-  <script src="https://raw.githubusercontent.com/AVGP/a-touch-controls/master/a-touch-controls.js"></script>
+  <script src="lib/aframe-html-shader.min.js"></script>
   <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
 </head>
@@ -22,10 +22,11 @@
 
     <a-scene cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
       <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
-        <a-marker  markerhandler id="marker"  preset='kanji'></a-marker>
+        <a-marker markerhandler id="marker"  preset='kanji'></a-marker>
         <a-camera></a-camera>
       </a-scene>
 
-
+      
+      <script>run();</script>
 </body>
 </html>
