now can add text

--- a/vr.html
+++ b/vr.html
@@ -15,14 +15,12 @@
 
 
 <body style='margin : 0px; overflow: hidden;'>
-  <a href="index.html">
-    <div class="menu-overlay"></div>
-  </a>
   <ul id="checklist" class="checklist" style="list-style-type:square">
   </ul>
 
-  <a-scene cursor="rayOrigin: mouse " vr-mode-ui="enabled:false">
-    <a-entity markerhandler id="marker" rotation="63.873 0 0" position="-0.227 1.597 -0.829"></a-entity>
+  <a-scene markerhandler cursor="rayOrigin: mouse " vr-mode-ui="enabled:true">
+    <a-entity  id="kanji" rotation="63.873 0 0" position="-0.227 1.597 -0.829"></a-entity>
+    <a-entity  id="hiro" rotation="63.873 0 0" position="-0.227 1.597 -0.829"></a-entity>
   </a-scene>
 
   <script>run();</script>
