--- a/ar.html
+++ b/ar.html
@@ -24,7 +24,9 @@
       <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
         <a-marker id="kanji" preset='kanji'></a-marker>
         <a-marker id="hiro" preset='hiro'></a-marker>
-        <a-camera></a-camera>
+        <a-entity>
+          <a-camera></a-camera>
+        </a-entity>
       </a-scene>
 
       
