--- a/ar.html
+++ b/ar.html
@@ -12,7 +12,6 @@
   <script src="lib/aframe-html-shader.min.js"></script>
   <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
-  <script src="look-controls.js"></script>
 </head>
 
 
@@ -26,7 +25,7 @@
         <a-marker id="kanji" preset='kanji'></a-marker>
         <a-marker id="hiro" preset='hiro'></a-marker>
         <a-entity>
-          <a-camera gyro-enabled="false"></a-camera>
+          <a-camera ></a-camera>
         </a-entity>
       </a-scene>
 
