--- a/ar.html
+++ b/ar.html
@@ -22,11 +22,9 @@
 
     <a-scene markerhandler cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
       <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
-        <a-marker id="kanji" preset='kanji'></a-marker>
-        <a-marker id="hiro" preset='hiro'></a-marker>
-        <a-entity>
-          <a-camera ></a-camera>
-        </a-entity>
+      <a-marker-camera id="kanji" preset='kanji'></a-marker-camera>
+
+
       </a-scene>
 
       
