--- a/ar.html
+++ b/ar.html
@@ -20,11 +20,13 @@
       <ul id="checklist" class="checklist" style="list-style-type:square">
         </ul>
 
-    <a-scene markerhandler cursor="rayOrigin: mouse" embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false">
+    <a-scene markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false">
       <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
       <a-marker id="kanji" preset='kanji'></a-marker>
       <a-marker id="hiro" preset='hiro'></a-marker>
-      <a-entity camera></a-entity>
+      <a-entity camera look-controls mouse-cursor >
+        <a-cursor  color="yellow"></a-cursor>
+      </a-entity>
       </a-scene>
 
       
