--- a/ar.html
+++ b/ar.html
@@ -24,7 +24,7 @@
       <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
       <a-marker id="kanji" preset='kanji'></a-marker>
       <a-marker id="hiro" preset='hiro'></a-marker>
-      <a-entity camera look-controls mouse-cursor >
+      <a-entity camera mouse-cursor >
         <a-cursor  color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
