--- a/ar.html
+++ b/ar.html
@@ -25,7 +25,7 @@
       <a-marker id="kanji" preset='kanji'></a-marker>
       <a-marker id="hiro" preset='hiro'></a-marker>
       <a-entity camera mouse-cursor >
-        <a-cursor  color="yellow"></a-cursor>
+        <a-cursor fuse="false" color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
 
