--- a/demoTracking.html
+++ b/demoTracking.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>tracking.js - face with camera</title>
+  <title>Reconocimiento de Objetos</title>
   <link rel="stylesheet" href="assets/demo.css">
 
   <script src="lib/tracking-min.js"></script>
