--- a/demoTracking.html
+++ b/demoTracking.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/demo.css">
 
   <script src="lib/tracking-min.js"></script>
-  <script src="lib/eye.js"></script>
+  <script src="lib/casco.js"></script>
   <script src="lib/glassesClassifier2.js"></script>
   <script src="lib/face-min.js"></script>
    <script src="lib/dat.gui.min.js"></script>
@@ -36,7 +36,7 @@
       var video = document.getElementById('video');
       var canvas = document.getElementById('canvas');
       var context = canvas.getContext('2d');
-      var tracker = new tracking.ObjectTracker('eye');
+      var tracker = new tracking.ObjectTracker('casco');
       tracker.setInitialScale(4);
       tracker.setStepSize(2);
       tracker.setEdgesDensity(0.1);
