--- a/ar.html
+++ b/ar.html
@@ -19,7 +19,8 @@
     <a href="index.html"><div class="menu-overlay"></div></a>  
       <ul id="checklist" class="checklist" style="list-style-type:square">
         </ul>
-        <a onclick="playPause(source0)" class="btn btn-primary play-overlay"></a>
+        <!--<a onclick="playPause(source0)" class="btn btn-primary play-overlay"></a>-->
+        
 
     <a-scene markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false">
       <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
