--- a/placas.html
+++ b/placas.html
@@ -32,7 +32,7 @@
                         <input type="checkbox" class="form-check-input" id="arCheck">
                         <label class="form-check-label" for="arCheck">AR</label>
                       </div>
-                <!--<a onclick="goTo()" class="btn btn-primary play-overlay"></a>-->
+                <a onclick="goTo()" class="btn btn-primary play-overlay"></a>
             </div>
           </div>
 
