--- a/prueba.html
+++ b/prueba.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>
-    MuseoAR
+    prueba
   </title>
   <meta name="Demo Realidad Aumentada" content="MuseoAR">
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
