--- a/prueba.html
+++ b/prueba.html
@@ -1,38 +1,50 @@
 <html>
 <head>
-  <title>
-    prueba
-  </title>
-  <meta name="Demo Realidad Aumentada" content="MuseoAR">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <script src="lib/jquery.min.js"></script>
-  <script src="lib/aframe.min.js"></script>
-  <script src="lib/aframe-ar.js"></script>
-  <script src="lib/aframe-html-shader.min.js"></script>
-  <script src="arController.js"></script>
-  <script src="jsonUtils.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
-
 <body style='margin : 0px; overflow: hidden;'>
-    <a id="playButton" onclick="firstPlay()"><div class="btn btn-primary play-overlay menu-overlay"></div></a>  
-      <ul id="checklist" class="checklist" style="list-style-type:none">
-        </ul>
-       <!--  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>-->
-        
+<!-- include A-Frame obviously -->
+<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+  <script src="https://unpkg.com/webrtc-adapter/out/adapter.js"></script>
+  <script src="https://unpkg.com/aframe-video-billboard"></script>
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script>
+    registerAframeVideoBillboard(window.AFRAME);
+  </script>
+<!-- include ar.js for A-Frame -->
+<button id="play-button">Play</button>
+<body style='margin : 0px; overflow: hidden;'>
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: matrix; matrixCodeType: 3x3;">
+    <!-- create your content here. just a box for now -->
+	<a-assets>
 
-    <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: matrix; matrixCodeType: 3x3;">
-      <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
-      <a-marker id="kanji" preset='kanji'></a-marker>
-      <a-marker id="hiro" preset='hiro'></a-marker>
-      <a-entity camera mouse-cursor >
-        <a-cursor fuse="false" color="yellow"></a-cursor>
-      </a-entity>
-      </a-scene>
+        <video id="video"
+             src="/assets/video/placas/@PLACA4-SF.webm"
+              crossOrigin="anonymous"
+	    autoplay="true"
+	    loop="true"
+	    style="display: none"></video>
+</a-assets>
 
+ 	</a-assets>
       
-      <script>hideOrShow("playButton");
-      run();</script>
+    <a-video-billboard position="0 0 -5"></a-video-billboard>
+    <a-marker preset='hiro'>
+	  <a-video src="#video" width="16" height="9" position="0 0 0" rotation="-90 0 0" scale="0.1 0.1 0.1"></a-video>
+
+    </a-marker>
+
+      <a-entity camera></a-entity>
+  </a-scene>
+<script>
+var video = document.getElementById('video');
+console.log(video);
+
+document.getElementById('play-button').addEventListener("click", function(e){
+  this.style.display = 'none';
+  video.play();
+}, false);
+
+</script>
 </body>
 </html>
