--- a/prueba.html
+++ b/prueba.html
@@ -5,12 +5,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-  <script src="https://unpkg.com/webrtc-adapter/out/adapter.js"></script>
-  <script src="https://unpkg.com/aframe-video-billboard"></script>
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-  <script>
-    registerAframeVideoBillboard(window.AFRAME);
-  </script>
+
 <!-- include ar.js for A-Frame -->
 <button id="play-button">Play</button>
 <body style='margin : 0px; overflow: hidden;'>
@@ -24,11 +20,11 @@
 	    autoplay="true"
 	    loop="true"
 	    style="display: none"></video>
-</a-assets>
+</a-assets> 
 
  	</a-assets>
       
-    <a-video-billboard position="0 0 -5"></a-video-billboard>
+    <a-video position="0 0 -5"></a-video>
     <a-marker preset='hiro'>
 	  <a-video src="#video" width="16" height="9" position="0 0 0" rotation="-90 0 0" scale="0.1 0.1 0.1"></a-video>
 
