--- a/ar.html
+++ b/ar.html
@@ -7,8 +7,8 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <script src="lib/jquery.min.js"></script>
-  <script src="lib/aframe.min.js"></script>
-  <script src="lib/aframe-ar.js"></script>
+  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <script src="lib/aframe-html-shader.min.js"></script>
   <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
