--- a/prueba.html
+++ b/prueba.html
@@ -4,7 +4,7 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 <!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 <!-- include ar.js for A-Frame -->
@@ -25,7 +25,7 @@
  	</a-assets>
       
     <a-marker preset='hiro'>
-	  <a-video src="#video" width="16" height="9" position="0 0 0" rotation="-90 0 0" scale="0.1 0.1 0.1"></a-video>
+	  <a-video src="#video"  position="0 0 0" rotation="-90 0 0" scale="1 1 1"></a-video>
 
     </a-marker>
 
