--- a/ar.html
+++ b/ar.html
@@ -22,7 +22,7 @@
        <!--  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>-->
         
 
-    <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: matrix; matrixCodeType: 3x3;">
+    <a-scene id="scene" markerhandler embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: matrix; matrixCodeType: 3x3;">
       <a-marker id="kanji" preset='kanji'></a-marker>
       <a-entity camera mouse-cursor >
         <a-cursor fuse="false" color="yellow"></a-cursor>
