--- a/ar.html
+++ b/ar.html
@@ -7,8 +7,8 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <script src="lib/jquery.min.js"></script>
-  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="lib/aframe.min.js"></script>
+  <script src="lib/aframe-ar.js"></script> 
   <script src="lib/aframe-html-shader.min.js"></script>
   <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
@@ -19,20 +19,22 @@
     <a id="playButton" onclick="firstPlay()"><div class="btn btn-primary play-overlay menu-overlay"></div></a>  
       <ul id="checklist" class="checklist" style="list-style-type:none">
         </ul>
+
        <!--  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>-->
         
 
-    <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-    <!--<a-scene id="scene" markerhandler embedded arjs='trackingMethod: best; sourceType: image; sourceUrl: bashScripts/stelliumMarker.png;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: matrix; matrixCodeType: 3x3;">-->
-      <a-marker id="kanji" preset='kanji'></a-marker>
-       <a-marker id="stellium" preset="custom" type="pattern" url="stellium.patt">
+   <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+    <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/Placa9A.png ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
+      <a-marker id="stellium" type="pattern" preset='kanji'></a-marker>
+       <!--<a-marker id="stellium"  preset="custom" type="pattern" url="ungs.patt">-->
         <!--<a-box  color="#4CC3D9" shadow></a-box> -->
       </a-marker>
-      <a-entity camera mouse-cursor >
+      <a-entity camera mouse-cursor ></a-entity>
         <a-cursor fuse="false" color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
-
+      <a onclick="previous()" class="previousRect"></a>
+      <a onclick="next()" class="nextRect"></a>
       
       <script>hideOrShow("playButton");
       run();</script>
