--- a/ar.html
+++ b/ar.html
@@ -25,7 +25,7 @@
 
    <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/Placa9A.png ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
-      <a-marker id="stellium" type="pattern" preset='kanji'></a-marker>
+      <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
        <!--<a-marker id="stellium"  preset="custom" type="pattern" url="ungs.patt">-->
         <!--<a-box  color="#4CC3D9" shadow></a-box> -->
       </a-marker>
@@ -33,8 +33,8 @@
         <a-cursor fuse="false" color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
-      <a onclick="previous()" class="previousRect"></a>
-      <a onclick="next()" class="nextRect"></a>
+     <div onclick="previous()" class="previousRect"></div>
+     <div onclick="next()" class="nextRect"></div>
       
       <script>hideOrShow("playButton");
       run();</script>
