--- a/ar.html
+++ b/ar.html
@@ -33,7 +33,7 @@
         <a-cursor fuse="false" color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
-     <div onclick="previous()" class="previousRect"></div>
+     <!--<div onclick="previous()" class="previousRect"></div>-->
      <div onclick="next()" class="nextRect"></div>
       
       <script>hideOrShow("playButton");
