first card autoplay

--- a/ar.html
+++ b/ar.html
@@ -36,7 +36,7 @@
      <!--<div onclick="previous()" class="previousRect"></div>-->
      <div onclick="next()" class="nextRect"></div>
       
-      <script>hideOrShow("playButton");
+      <script>
       run();</script>
 </body>
 </html>
