--- a/ar.html
+++ b/ar.html
@@ -23,8 +23,8 @@
        <!--  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>-->
         
 
-   <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-    <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/Placa9A.png ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
+  <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+    <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
        <!--<a-marker id="stellium"  preset="custom" type="pattern" url="ungs.patt">-->
         <!--<a-box  color="#4CC3D9" shadow></a-box> -->
