para probar markers

--- a/ar.html
+++ b/ar.html
@@ -26,6 +26,9 @@
   <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
+      <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
+      <a-marker id="A" type="pattern" preset='A'></a-marker>
+      <a-marker id="B" type="pattern" preset='B'></a-marker>
        <!--<a-marker id="stellium"  preset="custom" type="pattern" url="ungs.patt">-->
         <!--<a-box  color="#4CC3D9" shadow></a-box> -->
       </a-marker>
