some fixes on mtl loading

--- a/webcam.html
+++ b/webcam.html
@@ -17,10 +17,10 @@
 </head>
   
 <body>
+<div id="kanji"></div>    
 <div id="container">
     <video autoplay="true" id="videoElement">
-     
-    </video>
+    </video>   
 </div>
 <script>var video = document.querySelector("#videoElement");
  
