--- a/jitter.html
+++ b/jitter.html
@@ -29,7 +29,8 @@
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono;' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;' vr-mode-ui="enabled: false;">-->
-  <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; cameraParametersUrl: calibracion.dat;' vr-mode-ui="enabled: false;">
+  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; cameraParametersUrl: calibracion.dat;' vr-mode-ui="enabled: false;">-->
+  <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 640; sourceHeight: 480' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
       <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
 
