--- a/jitter.html
+++ b/jitter.html
@@ -33,7 +33,7 @@
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 640; sourceHeight: 480' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 1024; sourceHeight: 768' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam ;debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 2048; sourceHeight: 1536' vr-mode-ui="enabled: false;">-->
-  <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; trackingMethod: best; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 1024; sourceHeight: 768' vr-mode-ui="enabled: false;">
+  <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 1024; sourceHeight: 768' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
       <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
 
