--- a/jitter.html
+++ b/jitter.html
@@ -37,7 +37,7 @@
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; trackingMethod: best; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 1024; sourceHeight: 768' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; trackingMethod: best; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 800; sourceHeight: 600' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 800; sourceHeight: 600' vr-mode-ui="enabled: false;">-->
-  <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat; sourceWidth: 1024; sourceHeight: 768' vr-mode-ui="enabled: false;">
+  <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
       <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
 
