--- a/prueba.html
+++ b/prueba.html
@@ -10,12 +10,12 @@
 <!-- include ar.js for A-Frame -->
 <button id="play-button">Play</button>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: true; detectionMode: matrix; matrixCodeType: 3x3;">
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat;' vr-mode-ui="enabled: false; detectionMode: mono;">
     <!-- create your content here. just a box for now -->
 	<a-assets>
 
         <video id="video"
-             src="/assets/video/placas/@PLACA4-SF.webm"
+             src="assets/video/placas/@PLACA4-SF.webm"
               crossOrigin="anonymous"
 	    autoplay="true"
 	    loop="true"
