--- a/prueba.html
+++ b/prueba.html
@@ -25,11 +25,11 @@
  	</a-assets>
       
     <a-marker preset='hiro'>
-	  <a-video src="#video"  position="0 0 0" rotation="-90 0 0" scale="1 1 1"></a-video>
+	  <a-video src="#video"  position="0 0 0" rotation="-90 0 0" scale="10 10 10"></a-video>
 
     </a-marker>
 
-      <a-entity camera></a-entity>
+      <a-entity camera zoom="0.5"></a-entity>
   </a-scene>
 <script>
 var video = document.getElementById('video');
