prueba con detection mode mono

--- a/prueba.html
+++ b/prueba.html
@@ -10,7 +10,7 @@
 <!-- include ar.js for A-Frame -->
 <button id="play-button">Play</button>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat; sourceWidth: 640; sourceHeight: 480; maxDetectionRate:20; canvasWidth: 640; canvasHeight:480;' vr-mode-ui="enabled: false; detectionMode: mono;">
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat; sourceWidth: 640; sourceHeight: 480; maxDetectionRate:20; canvasWidth: 640; canvasHeight:480; detectionMode: mono' vr-mode-ui="enabled: false ">
     <!-- create your content here. just a box for now -->
 	<a-assets>
 
