sacado con fov 120

--- a/prueba.html
+++ b/prueba.html
@@ -29,7 +29,7 @@
 
     </a-marker>
 
-      <a-entity camera="zoom:3.5"></a-entity>
+      <a-entity camera="fov:120"></a-entity>
   </a-scene>
 <script>
 var video = document.getElementById('video');
