--- a/webcam_learn.html
+++ b/webcam_learn.html
@@ -134,13 +134,11 @@ var video = document.querySelector("#videoElement");
         rect.classList.add('rect');
         //rect.appendChild(input);
         //rect.appendChild(arrow);
-	/*
-        document.getElementById('photo').appendChild(rect);
+        document.getElementById('videoElement').appendChild(rect);
         rect.style.width = w + 'px';
         rect.style.height = h + 'px';
         rect.style.left = (img.offsetLeft + x) + 'px';
         rect.style.top = (img.offsetTop + y) + 'px';
-	*/
       };
     };
 </script>
