added demo activity and cleaned some mess

--- a/index.html
+++ b/index.html
@@ -14,7 +14,5 @@
   <body style='margin : 0px; overflow: hidden;'>
 
           <script>
-            window.location.href = "trafoChecklist.html";</script>
-              
-
+            window.location.href = "menu.html?trafoCheckList";</script>
 </html>
