--- a/ar.html
+++ b/ar.html
@@ -5,7 +5,7 @@
   </title>
   <meta name="Demo Realidad Aumentada" content="MuseoAR">
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
   <script src="lib/jquery.min.js"></script>
   <script src="lib/aframe.min.js"></script>
   <script src="lib/aframe-ar.js"></script> 
@@ -16,21 +16,13 @@
 
 
 <body style='margin : 0px; overflow: hidden;'>
-    <a id="playButton" onclick="firstPlay()"><div class="btn btn-primary play-overlay menu-overlay"></div></a>  
       <ul id="checklist" class="checklist" style="list-style-type:none">
         </ul>
 
-       <!--  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>-->
-        
-
-  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;  detectionMode: mono_and_matrix; matrixCodeType: 3x3_PARITY65; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
-  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
-  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
-    <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
+       <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
+    <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
 
-       <!--<a-marker id="stellium"  preset="custom" type="pattern" url="ungs.patt">-->
-        <!--<a-box  color="#4CC3D9" shadow></a-box> -->
       </a-marker>
       <a-entity camera mouse-cursor ></a-entity>
         <a-cursor fuse="false" color="yellow"></a-cursor>
