--- a/menu.html
+++ b/menu.html
@@ -15,8 +15,8 @@
     <script src="menuController.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="mobile-styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="assets/styles/mobile-styles.css" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
 
@@ -37,6 +37,10 @@
           </div>
 
 
-          <script>loadMenu("actividad");
+          <script>
+              var a = window.location.toString();
+                var name = a.substring(a.indexOf("?") + 1);
+          loadMenu(name);
+          console.log(name);
           $("#arCheck").prop('checked', true);</script>
 </html>
