--- a/arEmu.html
+++ b/arEmu.html
@@ -22,7 +22,7 @@
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;  detectionMode: mono_and_matrix; matrixCodeType: 3x3_PARITY65; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
-    <a-scene id="scene" cursor="rayOrigin: mouse" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
+    <a-scene id="scene" cursor="rayOrigin: mouse" markerhandler embedded arjs='sourceType: image; sourceUrl: other/demo.jpg ; debugUIEnabled: false; detectionMode: mono; maxDetectionRate:20;' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
       <a-camera camera>
         <a-cursor ></a-cursor>
