--- a/vr.html
+++ b/vr.html
@@ -20,8 +20,8 @@
         </ul> 
        
         <a-scene markerhandler cursor="rayOrigin: mouse " vr-mode-ui="enabled:true"> 
-          <a-entity id="kanji" position="0 0.723 -3.143" rotation="70 0 0" ></a-entity> 
-          <a-entity id="hiro" aaposition="0 0.723 -3.143" rotation="70 0 0" ></a-entity> 
+          <a-entity id="kanji" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0" ></a-entity> 
+          <a-entity id="hiro" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0" ></a-entity> 
         </a-scene> 
         <a-entity camera touch-controls></a-entity>
       </a-entity> 
