formatin and changing redirect php

--- a/ar.html
+++ b/ar.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <title>
     MuseoAR
@@ -8,43 +9,45 @@
   <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
   <script src="lib/jquery.min.js"></script>
   <script src="jsonUtils.js"></script>
-  <script>loadJSON('ARjsMultiMarkerFile',function(response){
-    localStorage.setItem('ARjsMultiMarkerFile',JSON.stringify(response));
-})</script>
+  <script>loadJSON('ARjsMultiMarkerFile', function (response) {
+      localStorage.setItem('ARjsMultiMarkerFile', JSON.stringify(response));
+    })</script>
   <script src="lib/aframe.min.js"></script>
-  <script src="lib/aframe-ar.js"></script> 
+  <script src="lib/aframe-ar.js"></script>
   <script src="arController.js"></script>
 
 </head>
 
 
 <body style='margin : 0px; overflow: hidden;'>
-      <ul id="checklist" class="checklist" style="list-style-type:none">
-        </ul>
-        <div class="scanningSpinner">
-          <label>
-            Scanning
-          </label>
-          <div class="rect1"></div>
-          <div class="rect2"></div>
-          <div class="rect3"></div>
-        </div>
+  <ul id="checklist" class="checklist" style="list-style-type:none">
+  </ul>
+  <div class="scanningSpinner">
+    <label>
+      Scanning
+    </label>
+    <div class="rect1"></div>
+    <div class="rect2"></div>
+    <div class="rect3"></div>
+  </div>
 
-       <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
-    <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
-      <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
-      <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
-      <a-marker id="multi" preset='area'></a-marker>
+  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
+  <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;'
+    vr-mode-ui="enabled: false;">
+    <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
+    <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
+    <a-marker id="multi" preset='area'></a-marker>
 
-      </a-marker>
-      <a-entity camera mouse-cursor ></a-entity>
-        <a-cursor fuse="false" color="yellow"></a-cursor>
-      </a-entity>
-      </a-scene>
+    </a-marker>
+    <a-entity camera mouse-cursor></a-entity>
+    <a-cursor fuse="false" color="yellow"></a-cursor>
+    </a-entity>
+  </a-scene>
 
-      
-      <script>
-        hideOrShow("playButton");
-      run();</script>
+
+  <script>
+    hideOrShow("playButton");
+    run();</script>
 </body>
+
 </html>
