added csv parser

--- a/arEmu.html
+++ b/arEmu.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
 
   <script src="lib/jquery.min.js"></script>
-  <script src="jsonUtils.js"></script>
+  <script src="fileUtils.js"></script>
   <script>loadJSON('ARjsMultiMarkerFile',function(response){
       localStorage.setItem('ARjsMultiMarkerFile',JSON.stringify(response));
   })</script>
