--- a/vr.html
+++ b/vr.html
@@ -11,7 +11,7 @@
         <script src="lib/aframe.min.js"></script>
         <script src="lib/a-touch-controls.js"></script>  
         <script src="arController.js"></script> 
-        <script src="jsonUtils.js"></script> 
+        <script src="fileUtils.js"></script> 
       </head> 
        
        
