improved trafo activity

--- a/vr.html
+++ b/vr.html
@@ -19,7 +19,7 @@
         <ul id="checklist" class="checklist" style="list-style-type:none"> 
         </ul> 
        
-        <a-scene markerhandler cursor="rayOrigin: mouse " vr-mode-ui="enabled:true"> 
+        <a-scene markerhandler render-queue cursor="rayOrigin: mouse " vr-mode-ui="enabled:true"> 
           <a-entity id="kanji" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0" ></a-entity> 
           <a-entity id="hiro" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0" ></a-entity> 
           <a-entity id="multi" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0"></a-entity>
