--- a/ar.html
+++ b/ar.html
@@ -16,6 +16,8 @@
   <script src="lib/aframe-ar.js"></script>
   <script src="Controller.js"></script>
 
+  
+
 </head>
 
 
@@ -33,8 +35,10 @@
 
 
   <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
-  <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;'
+  <a-scene id="scene" markerhandler render-queue embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;'
     vr-mode-ui="enabled: false;">
+
+
     <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
     <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
     <a-marker id="multi" preset='area'></a-marker>
